fixed missing semi-colon from spacing restructure

--- a/scss/foundation/components/_joyride.scss
+++ b/scss/foundation/components/_joyride.scss
@@ -14,7 +14,7 @@ $joyride-tip-position-offset: 22px !default;
 // Here, we're setting the tip dont styles
 $joyride-tip-font-color: #fff !default;
 $joyride-tip-font-size: emCalc(14px) !default;
-$joyride-tip-header-weight bold !default;
+$joyride-tip-header-weight: bold !default;
 
 // This changes the nub size
 $joyride-tip-nub-size: 14px !default;
